styles.css
body{
  font-family: 'Roboto', sans-serif;

  display: grid;
  grid-template-columns: 1fr 3fr;
}

* {
  margin: 0;
  padding: 0;
}

/* Header */

.header{
  grid-column: 2/3;
  display: grid;
  grid-template-columns: 2fr 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 8px;
  padding: 8px 16px;
  box-shadow: 0px 10px 10px -2px rgba(120, 140, 113, 0.596);
  z-index: 1;
}

.profile-info {
  display: grid;
  grid-template-columns: 24px 48px auto;
  gap: 8px;
  align-items: center;
  justify-self: right;
}

.username {
  justify-self: center;
  padding-right: 16px;
}

.avatar-small {
  height: 40px;
  border-radius: 50%;
}

.search-bar {
  display: grid;
  grid-template-columns: 24px auto;
  gap: 8px;
  align-items: center;
}

input[type="text"] {
  width: 80%;
  height: 16px;
  border: none;
  background-color: #B4E197;
  border-radius: 4px;
}

.greeting-area {
  display: grid;
  grid-template-columns: 60px auto;
  gap: 16px;
  align-items: center;
}

.greeting-text {
  font-weight: bold;
  font-size: 12px;
}

.greeting-text p ~ p{
  font-size: 1.5rem;
  padding-top: 3px;
}

.avatar-big {
  height: 60px;
  border-radius: 50%;
}

.button-area {
  display: grid;
  align-items: start;
  align-content: center;
  grid-template-columns: auto auto auto;
  gap: 24px;
}

button {
  background-color: #4E944F;
  border: none;
  border-radius: 24px;
  padding: 8px 16px;
  color: white;
  font-weight: bold;
}


/* Main Content */
.main-content {
  background-color: #B4E197;
  display: grid;
  grid-template-columns: 2fr 1fr;
  gap: 24px;
  padding: 24px;
}


.card-section {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: auto;
  gap: 24px;
  height: 100%;
}

.card {
  background-color: white;
  box-shadow: 5px 10px 10px -2px rgba(120, 140, 113, 0.596);
  border-radius: 6px;
}

.main {
  border-left: #FFC4DD 5px solid;
  padding: 24px;
  display: grid;
}

.card-title {
  font-size: 1rem;
  padding-bottom: 6px;
}

.card-text {
  color: gray;
  font-size: 0.8rem;

}

.card-icons {
  justify-self: right;
  align-self: end;
}

h3{
  padding-bottom: 8px;
  font-size: 1.2rem;
  font-weight: 500;
}

.projects {
  grid-row: 1/3;
  display: flex;
  flex-direction: column;
}

.announcements {
  grid-column: 2/3;
}

.announcement.card {
  padding: 24px;
}

.announcement-text {
  font-size: 0.8rem;
  color: gray;
}

h6 {
  font-size: 0.8rem;
}

hr {
  border: rgb(222, 221, 221) solid 0.5px;
  margin-top: 16px;
  margin-bottom: 16px;
}

.trendings {
  grid-column: 2/3;
}

.trending.card {
  padding: 16px;
}

.trending-item {
  display: flex;
  gap: 12px;
  align-items: center;
  padding: 8px;
}

.user-tag {
  font-size: 0.9rem;
  padding-bottom: 4px;
}

.user-title {
  color: gray;
  font-size: 0.9rem;
}

/* Sidebar */
.sidebar{
  grid-row: 1/3;
  background-color: #4E944F;
  color: white;
}

.sidebar-logo {
  display: flex;
  gap: 6px;
  padding-left: 30px;
  padding-right: 20px;
}

.sidebar h1{
  font-size: 1.5rem;
}

ul {
  display: grid;
  grid-template-columns: 40px 1fr;
  align-items: center;
  gap: 4px;
  padding-left: 30px;
}

li {
  list-style: none;
  font-weight: bold;
}

